# Presentations

./: 2segments.tex  3segmentations.tex  README.md  pdfthumb.bash  presentation.aux  presentation.nav  presentation.out  presentation.toc  presentation.vrb
Examples/: MSOpenCurvePart2.eps  MSOpenCurvePart3.eps  MSOpenCurvePart4.eps  PartOpenCurveWithItMode1.eps  PartOpenCurveWithItMode3.eps
IPOLMeetingImageProcessing/: DGtal.tex
Images/: gridCurve3d2.eps
Slides3DFluxDGtalMeeting2011/: 1intro.tex  2visu3D.tex  3futur.tex  Makefile  example.u3d  movie15.sty  presDGTalFlux3D.tex
SlidesCurvesDGtalMeeting2012/: 0ranges.tex  1gridcurve.tex  3segmentations.tex  presentation.tex
SlidesDGtalGTGeom2012/: presentation.tex
SlidesDGtalIPOL2012/: beamerthemeliris2.sty  presentation.tex  team.tex
SlidesDGtalMeeting2014/: presentation.tex  team.tex
SlidesDigitalSurfaceDGtalMeeting2012/: Makefile  macros.tex  slides.aux  slides.nav  slides.out  slides.tex
SlidesDigitalSurfaceDGtalMeeting2012/Examples/: CMakeLists.txt  example-1.cpp  example-2.cpp  example-3.cpp  example-4.cpp
SlidesGTGeodisOct2011/: presentation.tex  team.tex
SlidesGeometry1DDGtalMeeting2011/: 0objectifs.tex  1ranges.tex  2segments.tex  presentation.tex
SlidesIntroDGtalMeeting2012/: presentation.tex
SlidesIntroKernelDGtalMeeting2011/: presentation.tex
SlidesIntroductionDGtalMeeting/: slides.tex  team.tex
SlidesIrreducibleFractionPatternStraightnessDGtalMeeting2012/: Makefile  slides.tex
SlidesProjectManagement2012/: presentation.tex
SlidesProjectManagment2012/: presentation.tex
(+85 files in other folders)
